<resources>
    <string name="app_name">SPENSA</string>
    <string name="emailTitulo">Email</string>
    <string name="contrasenhaTitulo">Contraseña</string>
    <string name="editTextEmail">Ejemplo@gmail.com</string>
    <string name="editTextPassword">*********</string>
    <string name="resetPassword">Olvidaste tu contraseña? Presione Aqui</string>
    <string name="ingresarTitulo">Ingresar Cuenta</string>
    <string name="registrarTitulo">Registrar Cuenta</string>
    <string name="ingresarNombre">Ingrese su nombre</string>
    <string name="nombreTitulo">Nombre</string>
    <string name="apellidoTitulo">Apellido</string>
    <string name="ingresarApellido">Ingrese su apellido</string>
    <string name="telefonoTitulo">Telefono</string>
    <string name="editTextTelefono">Ingrese su numero de telefono</string>
    <string name="fechaNacimientoTitulo">Fecha de Nacimiento</string>
    <string name="editTextFecha">Ingrese su fecha de nacimiento</string>
    <string name="ciudadTitulo">Ciudad</string>
    <string name="editTextCiudad">Seleccione la ciudad de su residencia</string>
    <string name="barrioTitulo">Barrio</string>
    <string name="editTextBarrio">Seleccione el barrio de su residencia</string>
    <string name="siguienteBtn">Siguiente</string>
    <string name="cedulaTitulo">Cedula</string>
    <string name="editTextCedula">Ingrese su numero de cedula</string>
    <string name="nombreUsuario">Nombre Usuario</string>
    <string name="editTextNombreUsuario">Ingrese un nombre de usuario</string>
    <string name="editTextCrearContra">Crea una contraseña</string>
    <string name="contraRepit">Repetir Contraseña</string>
    <string name="editTextCrearContra2">Escribe nuevamente la contraseña</string>


    //Presentations:
    //Cabeceros
    <string name="cabecero_uno">Bienvenido a Spensa</string>
    <string name="cabecero_dos">El flujo de tu dinero</string>
    <string name="cabecero_tres">Tu seguridad \n Es nuestra prioridad</string>
    //Descripciones
    <string name="descripcion_uno">
        <![CDATA[ \n• Simplificacion Financiera.\n• Almacenamiento de gastos y ingresos\n• Generación de facturas legales.\n• Resúmenes mensuales.\n• Control financiero eficiente y seguro.
    ]]>
    </string>
    <string name="descripcion_dos">
        <![CDATA[ \n• Registro de gastos y transferencias.\n• Categorización intuitiva.\n• Análisis de tendencias.\n• Optimizacion en el uso de tu dinero.
    ]]>
    </string>
    <string name="descripcion_tres">
        <![CDATA[\n• Encriptación de Datos de Alto Nivel.\n• Autenticacion con Token y Face ID.\n• Monitoreo continuo.\n• Transparencia.
    ]]>
    </string>
    //Botones
    <string name="btn_siguiente">Siguiente</string>
    <string name="btn_atras">Atras</string>
    <string name="btn_empezamos">Empezamos</string>

</resources>