<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterPage"
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/grey_top_background"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/titleNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombreTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNombreCompleto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/ingresarNombre"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/titleApellidoCompleto"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apellidoTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextApellidoCompleto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/ingresarApellido"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/titleEmailRegister"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/titleContrasenhaRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contrasenhaTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPasswordRegister"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/titleTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/telefonoTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />
        <EditText
            android:id="@+id/editTextTelefono"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextTelefono"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />


        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/purple_button_background"
            android:text="Registrarse"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registrarTitulo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@drawable/half_white_background"
        android:textColor="#fff"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>