<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".RegisterSteps.Step2">

    <LinearLayout
        android:id="@+id/linearLayoutStep2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="?android:attr/progressBarStyleHorizontal" />
            <TextView
                android:id="@+id/progressText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1/3"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="10dp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/titleEmailStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTitulo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmailStep2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/titleUsuarioStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nombreUsuario"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextNombreUsuario"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="14sp" />
        <TextView
            android:id="@+id/disponibleUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="Ese nombre de usuario se encuentra disponible"
            android:textColor="@color/colorGradient"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/titleContrasenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/contrasenhaTitulo"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextContrasenhaStep"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextCrearContra"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/titleRepetirContraStep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/contraRepit"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextRepetirContra"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextCrearContra2"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/ActivarFaceId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="Ingresar con Face ID"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />
            <Switch
                android:id="@+id/switchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:layout_marginStart="100dp"
                android:checked="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/avisoImportante"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="Entiendo que Spensa no puede recuperar esta contraseña por mí."
                    android:textColor="@color/white"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>





        <Button
            android:id="@+id/btn_registerStep"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/fondo_new_btn"
            android:text="@string/siguienteBtn"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>