<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage"
    android:background="@drawable/background_login">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:background="@drawable/grey_top_background"
        android:orientation="vertical"
        android:padding="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/titleEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emailTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextEmail"
            android:inputType="textEmailAddress"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/titleContrasenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/contrasenhaTitulo"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/format_edit_txt_white"
            android:ems="10"
            android:hint="@string/editTextPassword"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#8e8e8e"
            android:textColorHint="#8e8e8e"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/resetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/resetPassword"
            android:textAlignment="center"
            android:textColor="#4d4d4d" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view1"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="Prefieres Ingresar"
                android:textColor="#4d4d4d" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:background="#707070" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/social_border_button"
                android:drawableStart="@drawable/google"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="Google"
                android:textColor="#1704A1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_login_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="1"
                android:background="@drawable/social_border_button"
                android:drawableStart="@drawable/facebook"
                android:drawablePadding="16dp"
                android:padding="16dp"
                android:text="Facebook"
                android:textColor="#1704A1"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/purple_button_background"
            android:text="Iniciar Sesion"
            android:textColor="#fff"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingresarTitulo"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@drawable/half_white_background"
        android:textColor="#fff"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>